--- a/smile.html
+++ b/smile.html
@@ -1,6 +1,8 @@
-
-<!-- saved from url=(0031)http://schlierf.info/smile.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head><body>
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+	</head>
+	<body>
 		<style>
 		html, body {
 		  width:  100%;
@@ -119,6 +121,5 @@
 			//*/
 			
 		</script>
-	
-
-</body></html>
+	</body>
+</html>
